# SacramentalProject

./: .env.example  .gitignore  README.md  pyproject.toml
data/metadata/: moltmann.yaml
src/theology_rag/: cli.py  config.py  generate.py  ingest.py  retrieve.py
